add elements displaying to dom

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
   <link rel="stylesheet" type="text/css" href="wysiwyg.css">
 </head>
 <body>
-  <div id="main-container">
-    
+  <input type="text" value="type here">
+  <div id="outputEl">
+    <person class="person_container">
+      <header id ="header"></header>
+      <section id="section"></section>
+      <footer id="footer"></footer>
+    </person>
   </div>
   <script src="/wysiwyg.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
